Get the CI scripts ready

--- a/etc/terraform-juno-daily-azure.conf
+++ b/etc/terraform-juno-daily-azure.conf
@@ -24,3 +24,6 @@ MIRROR_URL="http://azure.archive.ubuntu.com/ubuntu/"
 
 # use HWE kernel and packages?
 HWE="yes"
+
+# suffix for generated .iso files
+OUTPUT_SUFFIX="-deb-live-build"
