--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a multi-line script
+    - name: Build and Upload daily .iso
       run: |
         mkdir artifacts
-        docker run --privileged -i -v /proc:/proc -v /artifacts:/artifacts -v ${PWD}:/working_dir -w /working_dir debian:latest sh < workflow.sh
-    - uses: actions/upload-artifact@master
-      with:
-        name: output
-        path: /artifacts
+        docker run --privileged -i \
+            -v /proc:/proc \
+            -v /artifacts:/artifacts \
+            -v ${PWD}:/working_dir \
+            -w /working_dir \
+            debian:latest \
+            /bin/bash -s etc/terraform-juno-daily-azure.conf "${{ secrets.key }}" "${{ secrets.secret }}" "${{ secrets.endpoint }}" "${{ secrets.bucket }}" < workflow.sh
