--- a/etc/config/bootloaders/grub-pc/grub.cfg
+++ b/etc/config/bootloaders/grub-pc/grub.cfg
@@ -1,6 +1,6 @@
 set default=0
 
-set gfxmode=1024x76,800x600,640x480,auto
+set gfxmode=auto
 loadfont $prefix/dejavu-bold-16.pf2
 loadfont $prefix/dejavu-bold-14.pf2
 loadfont $prefix/unicode.pf2
@@ -11,18 +11,12 @@ insmod png
 set color_normal=light-gray/black
 set color_highlight=white/black
 
-if [ -e /isolinux/splash.png ]; then
-    # binary_syslinux modifies the theme file to point to the correct
-    # background picture
-    set theme=/boot/grub/live-theme/theme.txt
-elif [ -e /boot/grub/splash.png ]; then
-    set theme=/boot/grub/live-theme/theme.txt
-else
-    set menu_color_normal=cyan/blue
-    set menu_color_highlight=white/blue
-fi
+set theme=/boot/grub/live-theme/theme.txt
 
 terminal_output gfxterm
+
+set timeout=10
+set timeout_style=menu
 
 menuentry "Try or install elementary OS" {
  linux /casper/vmlinuz APPEND_LIVE
