More bootloader theme improvements

--- a/etc/config/bootloaders/isolinux/stdmenu.cfg
+++ b/etc/config/bootloaders/isolinux/stdmenu.cfg
@@ -1,3 +1,4 @@
+menu color screen	37;40 #ff000000 #ff000000 none
 menu color title	* #FFFFFFFF *
 menu color border	* #00000000 #00000000 none
 menu color sel		* #ffffffff #76a1d0ff *
