Add support for multiple package list folders

--- a/etc/terraform-juno-daily-azure.conf
+++ b/etc/terraform-juno-daily-azure.conf
@@ -27,3 +27,6 @@ HWE="yes"
 
 # suffix for generated .iso files
 OUTPUT_SUFFIX="-deb-live-build"
+
+# folder suffix for the package lists to use
+PACKAGE_LISTS_SUFFIX="ubiquity"
