--- a/etc/terraform-juno-daily-distinst-azure.conf
+++ b/etc/terraform-juno-daily-distinst-azure.conf
@@ -20,13 +20,13 @@ CHANNEL="daily"
 NAME="elementary OS"
 
 # mirror to fetch packages from
-MIRROR_URL="http://archive.ubuntu.com/ubuntu/"
+MIRROR_URL="http://azure.archive.ubuntu.com/ubuntu/"
 
 # use HWE kernel and packages?
 HWE="yes"
 
 # suffix for generated .iso files
-OUTPUT_SUFFIX=""
+OUTPUT_SUFFIX="-distinst"
 
 # folder suffix for the package lists to use
-PACKAGE_LISTS_SUFFIX="ubiquity"
+PACKAGE_LISTS_SUFFIX="distinst"
