--- a/.github/workflows/daily-pinebookpro.yml
+++ b/.github/workflows/daily-pinebookpro.yml
@@ -1,11 +1,9 @@
-name: daily-5.1
+name: daily-pinebookpro
 
 on:
   push:
     branches:
-      - master
-  schedule:
-    - cron:  '0 0 * * *'
+      - pinebookpro
 
 jobs:
   build:
@@ -20,6 +18,6 @@ jobs:
     - name: Clone build scripts
       uses: actions/checkout@v1
 
-    - name: Build and upload daily .iso
+    - name: Build and upload image
       run: |
-        ./workflows.sh etc/terraform-daily-5.1-azure.conf "${{ secrets.key }}" "${{ secrets.secret }}" "${{ secrets.endpoint }}" "${{ secrets.bucket }}"
+        ./build-pinebookpro.sh "${{ secrets.key }}" "${{ secrets.secret }}" "${{ secrets.endpoint }}" "${{ secrets.bucket}}"
