--- a/pinebookpro/config/kernel/pinebook-pro-5.7.config
+++ b/pinebookpro/config/kernel/pinebook-pro-5.7.config
@@ -3816,7 +3816,7 @@ CONFIG_I2C_SLAVE=y
 CONFIG_I2C_SLAVE_EEPROM=m
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
-CONFIG_I2C_DEBUG_BUS=y
+# CONFIG_I2C_DEBUG_BUS is not set
 # end of I2C support
 
 # CONFIG_I3C is not set
