Rework and re-add patch for rkvdec

--- a/pinebookpro/config/kernel/pinebook-pro-5.7.config
+++ b/pinebookpro/config/kernel/pinebook-pro-5.7.config
@@ -6977,6 +6977,7 @@ CONFIG_AD2S1210=m
 CONFIG_STAGING_MEDIA=y
 CONFIG_VIDEO_HANTRO=m
 CONFIG_VIDEO_HANTRO_ROCKCHIP=y
+CONFIG_VIDEO_ROCKCHIP_VDEC=m
 
 #
 # soc_camera sensor drivers
