--- a/.github/workflows/daily-6.0.yml
+++ b/.github/workflows/daily-6.0.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - flatpak-preinstall
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch: {}
